--- a/.github/workflows/snak.yml
+++ b/.github/workflows/snak.yml
@@ -1,10 +1,36 @@
+name: GitHub Snake Game  # Line 1
+
+on:  
+  schedule:  # Line 3
+    - cron: "0 0 * * *"  # Runs daily at midnight UTC
+  workflow_dispatch:  # Allows manual runs
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Generate Snake Animation
+        uses: Platane/snk@v3
+        with:
+          github_user_name: ${{ github.repository_owner }}
+          outputs: dist/snake.svg
+
+      - name: Commit and Push Snake Animation
+        uses: EndBug/add-and-commit@v9
+        with:
+          message: "Updated Snake Game"
+          add: "dist/snake.svg"
+
+
+
+
+
+
 name: GitHub Snake Game
 
-
-
-on:
-
-  # Schedule the workflow to run daily at midnight UTC
 
   schedule:
 
